adds delete flag

--- a/lib/tasks.json
+++ b/lib/tasks.json
@@ -1,1 +1,1 @@
-[{"detail":"This is a difficult task","done":false},{"detail":"This is another task","done":false}]
+[{"detail":"This is a difficult task","done":false}]
