corrected array indexing in done flag

--- a/lib/tasks.json
+++ b/lib/tasks.json
@@ -1,1 +1,1 @@
-[{"detail":"This is a difficult","done":false},{"detail":"This is an updated amazing task","done":false},{"detail":"This is an updated interesting task","done":true},{"detail":"This is a great task","done":false}]
+[{"detail":"This is a difficult","done":true},{"detail":"This is an updated amazing task","done":false},{"detail":"This is an updated interesting task","done":true},{"detail":"This is a great task","done":false}]
